--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <!-- Audio -->
         <audio id="bg-music" loop preload="auto">
        <!-- <source src="assets/audio/minecraft-theme.mp3" type="audio/mpeg"> -->
-         <source src="assets/audio/Cumpleaños Feliz al estilo Minecraft.mp3" type="audio/mpeg">
+         <source src="assets/audio/Cumpleaños Feliz al estilo Minecraft.MP3" type="audio/mpeg">
         </audio>
         <button class="music-toggle" onclick="toggleMusic()">
             <i class="fas fa-volume-mute"></i>
@@ -127,4 +127,5 @@
     <!-- Fondo de bloques animados -->
 </div>
 </body>
+
 </html>
