Fix HTML formatting and structure
cambio codigo

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
         <!-- Audio -->
         <audio id="bg-music" loop preload="auto">
-       <!-- <source src="assets/audio/minecraft-theme.mp3" type="audio/mpeg"> -->
+       <!-- <source src="assets/audio/minecraft-theme.MP3" type="audio/mpeg"> -->
          <source src="assets/audio/Cumpleaños Feliz al estilo Minecraft.MP3" type="audio/mpeg">
         </audio>
         <button class="music-toggle" onclick="toggleMusic()">
@@ -129,3 +129,4 @@
 </body>
 
 </html>
+
