Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
        <!-- <source src="assets/audio/minecraft-theme.MP3" type="audio/mpeg"> -->
          <source src="assets/audio/Cumpleaños Feliz al estilo Minecraft.MP3" type="audio/mpeg">
         </audio>
-        <button class="music-toggle" onclick="toggleMusic()">
+        <button class="music-toggle">
             <i class="fas fa-volume-mute"></i>
         </button>
     </main>
@@ -129,4 +129,5 @@
 </body>
 
 </html>
+
 
