--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
          <source src="assets/audio/Cumpleaños Feliz al estilo Minecraft.MP3" type="audio/mpeg">
         </audio>
         <button class="music-toggle">
-            <i class="fas fa-volume-mute" onclick="toggleMusic()"></i>
+            <i class="fas fa-volume-up"></i>
         </button>
     </main>
 
@@ -129,6 +129,7 @@
 </body>
 
 </html>
+
 
 
 
